--- a/Pipfile
+++ b/Pipfile
@@ -32,8 +32,7 @@ sqlalchemy = "==1.4.19"
 urllib3 = "==1.26.14"
 werkzeug = "==2.0.1"
 wtforms = "==2.3.3"
-flask-security = "*"
-bcrypt = "*"
+bcrypt = "==4.0.1"
 
 [dev-packages]
 
