--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -31,7 +31,9 @@ sqlalchemy = "==1.4.19"
 urllib3 = "==1.26.14"
 werkzeug = "==2.0.1"
 wtforms = "==2.3.3"
-bcrypt = "4.0.1"
+bcrypt = "==4.0.1"
+jinja2 = "==3.0.1"
+password-strength = "==0.0.3.post2"
 
 [dev-packages]
 
