--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -34,6 +34,9 @@ wtforms = "==2.3.3"
 bcrypt = "==4.0.1"
 jinja2 = "==3.0.1"
 password-strength = "==0.0.3.post2"
+elasticsearch = "==8.6.2"
+certifi = "==2022.12.7"
+elastic-transport = "==8.4.0"
 
 [dev-packages]
 
